--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-server.port=8082
-spring.datasource.url=jdbc:mysql://localhost/db_logistica?serverTimeZone=America/Montevideo
-spring.datasource.username=root
-spring.datasource.password=root
+server.port=${port}
+spring.datasource.url=${database_url}
+spring.datasource.username=${database_username}
+spring.datasource.password=${database_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
