--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 			<artifactId>barcode4j</artifactId>
 			<version>2.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
