--- a/pom.xml
+++ b/pom.xml
@@ -26,22 +26,23 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		 <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency> 
-		 <dependency>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -84,13 +85,21 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.codehaus.jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<profiles>
 		<profile>
 			<id>cloud-gcp</id>
-			 <dependencyManagement>
+			<dependencyManagement>
 				<dependencies>
 					<dependency>
 						<groupId>org.springframework.cloud</groupId>
@@ -100,19 +109,19 @@
 						<scope>import</scope>
 					</dependency>
 				</dependencies>
-			</dependencyManagement> 
-			 <dependencies>
+			</dependencyManagement>
+			<dependencies>
 				<dependency>
 					<groupId>com.google.cloud</groupId>
 					<artifactId>spring-cloud-gcp-starter</artifactId>
 					<version>3.3.0</version>
-				</dependency> 
-			<dependency>
+				</dependency>
+				<dependency>
 					<groupId>com.google.cloud</groupId>
 					<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
 					<version>3.3.0</version>
-				</dependency> 
-			 </dependencies> 
+				</dependency>
+			</dependencies>
 			<build>
 
 				<plugins>
@@ -139,42 +148,42 @@
 			</plugin>
 			<!-- jacoco pluging -->
 			<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.7.7.201606060606</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>report</id>
-							<phase>prepare-package</phase>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.7.201606060606</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
 
-						</execution>
-					</executions>
-				</plugin> 
+					</execution>
+				</executions>
+			</plugin>
 
 			<!-- jacoco pluging -->
-			 <plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.1.2</version>
-					<executions>
-						<execution>
-							
-							<goals>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.1.2</version>
+				<executions>
+					<execution>
 
-								<goal>sources</goal>
-								<goal>resolve</goal>
-							</goals>
-							<configuration>
-								<classifier>javadoc</classifier>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin> 
+						<goals>
+
+							<goal>sources</goal>
+							<goal>resolve</goal>
+						</goals>
+						<configuration>
+							<classifier>javadoc</classifier>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 
 		</plugins>
