--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,9 @@
+server.port=${port}
+spring.datasource.url=${database_url}
+spring.datasource.username=${database_username}
+spring.datasource.password=${database_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.show_sql=true
-spring.cloud.appId=clawtech-logistica-proyecto
-spring.cloud.gcp.sql.instance-connection-name=clawtech-logistica-proyecto:us-central1:dblogistica
-spring.cloud.gcp.sql.database-name=dblogistica
-spring.datasource.username=dblogistica
-spring.cloud.gcp.project-id=clawtech-logistica-proyecto
