--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -99,6 +99,13 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<profiles>
@@ -177,7 +184,7 @@
 					</execution>
 				</executions>
 			</plugin> -->
-				
+
 			<!-- jacoco pluging -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
