--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,10 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=error
 spring.jpa.properties.hibernate.show_sql=trueº
+
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+spring.data.mongodb.database=logistica
