conexion con mongo db

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -6,5 +6,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.cloud.appId=clawtech-logistica-proyecto
 spring.cloud.gcp.sql.instance-connection-name=clawtech-logistica-proyecto:us-central1:dblogistica
 spring.cloud.gcp.sql.database-name=dblogistica
-spring.datasource.username=dblogistica
 spring.cloud.gcp.project-id=clawtech-logistica-proyecto
+spring.datasource.username=dblogistica
+
+
+spring.data.mongodb.uri=mongodb://34.138.195.1:27017/?readPreference=primary&directConnection=true&ssl=false
+spring.data.mongodb.database=logistica
