--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -2,3 +2,5 @@ runtime: java11
 instance_class: b4
 manual_scaling: 
   instances: 1
+# vpc_access_connector:
+#  name: projects/clawtech-logistica-proyecto/locations/us-east1/connectors/conectorappengine
