se agrega funcion devolver pedido

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.show_sql=trueº
 
 
