--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=${port}
-spring.datasource.url=${database_url}
-spring.datasource.username=${database_username}
+spring.datasource.url=jdbc:mysql://34.133.110.162/clawtech-logistica-proyecto:us-central1:dblogistica
+spring.datasource.username=dblogistica
 spring.datasource.password=${database_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
