--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost/dblogistica?serverTimeZone=America/Montevideo
+spring.datasource.url=jdbc:mysql://localhost/db_logistica?serverTimeZone=America/Montevideo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
