--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -2,3 +2,7 @@ runtime: java11
 instance_class: b4
 manual_scaling: 
   instances: 1
+
+handlers:
+- url: /.*
+  script: this field is required, but ignored
