--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
 			<version>2.0.2-beta</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-storage</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
 		<dependency>
@@ -99,12 +103,18 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-
+				<dependency>
+					<groupId>com.google.cloud</groupId>
+					<artifactId>spring-cloud-gcp-dependencies</artifactId>
+					<version>3.3.0</version>
+					<type>pom</type>
+					<scope>import</scope>
+				</dependency>
+			<dependency>
+				<groupId>com.google.cloud</groupId>
+				<artifactId>spring-cloud-gcp-starter</artifactId>
+				<version>3.3.0</version>
+			</dependency>
 
 	</dependencies>
 
@@ -114,9 +124,9 @@
 			<dependencyManagement>
 				<dependencies>
 					<dependency>
-						<groupId>org.springframework.cloud</groupId>
-						<artifactId>spring-cloud-dependencies</artifactId>
-						<version>2021.0.0</version>
+						<groupId>com.google.cloud</groupId>
+						<artifactId>spring-cloud-gcp-dependencies</artifactId>
+						<version>3.3.0</version>
 						<type>pom</type>
 						<scope>import</scope>
 					</dependency>
@@ -159,7 +169,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<systemPropertyVariables>
-						<profile>dev</profile>
+						<profile>cloud-gcp</profile>
 						<port>8081</port>
 						<database_url>jdbc:mysql://localhost/db_logistica?serverTimeZone=America/Montevideo</database_url>
 						<database_username>root</database_username>
