--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<name>LogisticaApp</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -103,24 +103,37 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-				<dependency>
-					<groupId>com.google.cloud</groupId>
-					<artifactId>spring-cloud-gcp-dependencies</artifactId>
-					<version>3.3.0</version>
-					<type>pom</type>
-					<scope>import</scope>
-				</dependency>
-			<dependency>
-				<groupId>com.google.cloud</groupId>
-				<artifactId>spring-cloud-gcp-starter</artifactId>
-				<version>3.3.0</version>
-			</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-dependencies</artifactId>
+			<version>3.3.0</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 
 	</dependencies>
 
+
 	<profiles>
 		<profile>
-			<id>cloud-gcp</id>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring.profiles.active>dev</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>gcp</id>
+			<properties>
+				<spring.profiles.active>gcp</spring.profiles.active>
+			</properties>
 			<dependencyManagement>
 				<dependencies>
 					<dependency>
@@ -169,7 +182,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<systemPropertyVariables>
-						<profile>cloud-gcp</profile>
+						<profile>dev</profile>
 						<port>8081</port>
 						<database_url>jdbc:mysql://localhost/db_logistica?serverTimeZone=America/Montevideo</database_url>
 						<database_username>root</database_username>
@@ -218,7 +231,7 @@
 
 
 		</plugins>
-
+	
 	</build>
 
 </project>
