--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost/db_logistica?serverTimeZone=America/Montevideo
+spring.datasource.url=jdbc:mysql://localhost:3308/dblogistica?serverTimeZone=America/Montevideo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.show_sql=trueº
 
