--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,17 +1,8 @@
-runtime: java
-env: flex
-resources:
-  cpu: 2
-  memory_gb: 2.0
-  disk_size_gb: 10
-  volumes:
-  - name: backenddisk
-    volume_type: tmpfs
-    size_gb: 0.5
+runtime: java11
+instance_class: b4
+manual_scaling: 
+  instances: 1
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 2
 
 handlers:
 - url: /.*
